# Cranked_Libretro_F

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
core/: Audio.cpp  Audio.hpp  CMakeLists.txt  Constants.hpp  Cranked.cpp  Debugger.cpp  Debugger.hpp  Files.cpp  Geometry.hpp  Graphics.cpp  Graphics.hpp  HeapAllocator.cpp  LuaEngine.cpp  LuaEngine.hpp  LuaRuntime.cpp  Menu.cpp  NativeEngine.cpp  Rom.cpp  Rom.hpp  Runtime.cpp  Utils.hpp
core/resources/: runtime.lua
desktop/: CMakeLists.txt  main.cpp
libretro/: CMakeLists.txt  core.cpp
patches/: ffi-msvc-windows.patch  lua54-native-exception-logging.patch  unicorn-crc32-rename.patch
scripts/: setup_windows.bat
